launch RDP for win

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -32,6 +32,7 @@
     "no_connection_selected": "No connection selected",
     "select_or_create_connection": "Select an existing connection or create a new one to get started.",
     "connect": "Connect",
+    "launch_rdp": "Launch Remote Desktop",
     "edit": "Edit",
     "delete": "Delete",
     "delete_connection": "Delete Connection",
@@ -208,18 +209,29 @@
     "host": "Host",
     "host_placeholder": "192.168.1.100",
     "host_required": "Please enter the host",
+    "port": "Port",
     "user": "User",
     "user_placeholder": "root",
+    "user_placeholder_windows": "Administrator",
     "user_required": "Please enter the user",
+    "connection_type": "Connection Type",
     "auth_method": "Authentication Method",
     "password": "Password",
     "password_ssh": "SSH Password",
+    "password_rdp": "Windows Password",
     "password_keep": "(leave blank to keep)",
     "password_required": "Please enter the password",
     "private_key": "Private Key",
     "key_path": "Private Key Path",
     "key_path_placeholder": "C:\\Users\\user\\.ssh\\id_rsa",
     "key_path_required": "Please enter the key path",
+    "rdp_auth_method": "RDP Authentication",
+    "rdp_credentials": "Saved Credentials",
+    "rdp_windows_auth": "Windows Authentication",
+    "domain": "Domain",
+    "domain_placeholder": "WORKGROUP",
+    "windows_auth_info": "The currently logged-in Windows user will be used to authenticate the RDP connection.",
+    "rdp_test_not_available": "Connection test not available for RDP. The connection will be validated when connecting.",
     "auto_connect": "Connect automatically on startup",
     "test_success": "Connection tested successfully!",
     "connection_updated": "Connection updated successfully!",
@@ -395,5 +407,18 @@
       "no_compose_to_deploy": "No compose content to deploy. Convert a docker run command first.",
       "deploy_directory": "Deploy directory"
     }
+  },
+  "rdp": {
+    "connecting": "Connecting to Remote Desktop...",
+    "connection_failed": "Connection Failed",
+    "retry": "Retry",
+    "disconnect": "Disconnect",
+    "fullscreen": "Fullscreen",
+    "exit_fullscreen": "Exit Fullscreen",
+    "settings": "Settings",
+    "session_active": "RDP Session Active",
+    "session_info": "The Remote Desktop session has been opened in a separate window. Use the Disconnect button to end the session.",
+    "session_launched": "Remote Desktop session launched for {{name}}",
+    "launch_failed": "Failed to launch Remote Desktop: {{error}}"
   }
 }
