--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -32,6 +32,7 @@
     "no_connection_selected": "Nenhuma conexão selecionada",
     "select_or_create_connection": "Selecione uma conexão existente ou crie uma nova para começar.",
     "connect": "Conectar",
+    "launch_rdp": "Abrir Área de Trabalho Remota",
     "edit": "Editar",
     "delete": "Deletar",
     "delete_connection": "Deletar Conexão",
@@ -208,19 +209,30 @@
     "host": "Host",
     "host_placeholder": "192.168.1.100",
     "host_required": "Informe o host",
+    "port": "Porta",
     "user": "Usuário",
     "user_placeholder": "root",
+    "user_placeholder_windows": "Administrator",
     "user_required": "Informe o usuário",
+    "connection_type": "Tipo de Conexão",
     "auth_method": "Método de Autenticação",
     "password": "Senha",
     "password_ssh": "Senha SSH",
+    "password_rdp": "Senha do Windows",
     "password_keep": "(deixe em branco para manter)",
     "password_required": "Informe a senha",
     "private_key": "Chave Privada",
     "key_path": "Caminho da Chave Privada",
-    "key_path_placeholder": "C:\\Users\\user\\.ssh\\id_rsa",
+    "key_path_placeholder": "C:\\\\Users\\\\user\\\\.ssh\\\\id_rsa",
     "key_path_required": "Informe o caminho da chave",
     "auto_connect": "Conectar automaticamente ao iniciar",
+    "rdp_auth_method": "Autenticação RDP",
+    "rdp_credentials": "Credenciais Salvas",
+    "rdp_windows_auth": "Autenticação Windows",
+    "domain": "Domínio",
+    "domain_placeholder": "WORKGROUP",
+    "windows_auth_info": "Será utilizado o usuário atualmente logado no Windows para autenticar na conexão RDP.",
+    "rdp_test_not_available": "Teste de conexão não disponível para RDP. A conexão será validada ao conectar.",
     "test_success": "Conexão testada com sucesso!",
     "connection_updated": "Conexão atualizada com sucesso!",
     "connection_created": "Conexão criada com sucesso!"
@@ -395,5 +407,18 @@
       "no_compose_to_deploy": "Nenhum conteúdo compose para implantar. Converta um comando docker run primeiro.",
       "deploy_directory": "Diretório de deploy"
     }
+  },
+  "rdp": {
+    "connecting": "Conectando à Área de Trabalho Remota...",
+    "connection_failed": "Falha ao Conectar",
+    "retry": "Tentar Novamente",
+    "disconnect": "Desconectar",
+    "fullscreen": "Tela Cheia",
+    "exit_fullscreen": "Sair da Tela Cheia",
+    "settings": "Configurações",
+    "session_active": "Sessão RDP Ativa",
+    "session_info": "A sessão de Área de Trabalho Remota foi aberta em uma janela separada. Use o botão Desconectar para encerrar a sessão.",
+    "session_launched": "Sessão de Área de Trabalho Remota aberta para {{name}}",
+    "launch_failed": "Falha ao abrir Área de Trabalho Remota: {{error}}"
   }
 }
