refactoring multi tab

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -44,7 +44,8 @@
     "deleted_success": "Deleted successfully",
     "docker": "Docker",
     "copy": "Copy",
-    "copied": "Copied to clipboard"
+    "copied": "Copied to clipboard",
+    "no_available_connections": "No available connections"
   },
   "settings": {
     "stacks_directory": "Stacks Directory",
