--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -45,7 +45,9 @@
     "docker": "Docker",
     "copy": "Copy",
     "copied": "Copied to clipboard",
-    "no_available_connections": "No available connections"
+    "no_available_connections": "No available connections",
+    "expand": "Expand",
+    "collapse": "Collapse"
   },
   "settings": {
     "stacks_directory": "Stacks Directory",
