--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -40,6 +40,21 @@
     "copy": "복사",
     "copied": "클립보드에 복사됨"
   },
+  "settings": {
+    "stacks_directory": "스택 디렉토리",
+    "stacks_directory_help": "Docker Compose 스택이 저장될 원격 디렉토리",
+    "data_management": "데이터 관리",
+    "export_database": "데이터베이스 내보내기",
+    "export_database_help": "모든 연결과 스니펫을 파일로 내보내기",
+    "import_database": "데이터베이스 가져오기",
+    "import_database_help": "백업 파일에서 연결과 스니펫 가져오기",
+    "export_success": "데이터베이스를 내보냈습니다",
+    "export_error": "데이터베이스 내보내기 오류",
+    "import_success": "데이터베이스를 가져왔습니다. 데이터를 다시 로딩 중...",
+    "import_error": "데이터베이스 가져오기 오류",
+    "import_warning": "경고: 모든 현재 데이터가 대체됩니다. 계속하시겠습니까?",
+    "invalid_file": "잘못된 백업 파일"
+  },
   "splash": {
     "starting": "시작 중...",
     "connecting_backend": "백엔드 연결 중...",
