--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -55,7 +55,18 @@
   },
   "settings": {
     "stacks_directory": "Diretório de Stacks",
-    "stacks_directory_help": "Diretório remoto onde as stacks Docker Compose serão armazenadas"
+    "stacks_directory_help": "Diretório remoto onde as stacks Docker Compose serão armazenadas",
+    "data_management": "Gerenciamento de Dados",
+    "export_database": "Exportar Banco de Dados",
+    "export_database_help": "Exportar todas as conexões e snippets para um arquivo",
+    "import_database": "Importar Banco de Dados",
+    "import_database_help": "Importar conexões e snippets de um arquivo de backup",
+    "export_success": "Banco de dados exportado com sucesso",
+    "export_error": "Erro ao exportar banco de dados",
+    "import_success": "Banco de dados importado com sucesso. Recarregando dados...",
+    "import_error": "Erro ao importar banco de dados",
+    "import_warning": "Atenção: Isso substituirá todos os dados atuais. Tem certeza?",
+    "invalid_file": "Arquivo de backup inválido"
   },
   "splash": {
     "starting": "Iniciando...",
